  - tree
  - vector (init, read)
* add generic type for ESEDB page, REGF hive bin, CREG data block, etc

Types:
* merge segment handling into single source file?
* area
  - add mapped offset support ?
  - add mapped size write support ?
  - change behavior of libfdata_area_get_element_value_at_offset to return 0 if offset is out of bounds like libfdata_list_set_element_value_at_offset?
* list
  - reimplement libfdata_list_get_element_index_at_value_index ?
  - prepend: optimize recalculation of element index ?
  - add stream like read/write buffer ?
  - add libfdata_list_set_element_by_index_with_mapped_size
  - add libfdata_list_prepend_element_with_mapped_size
  - add libfdata_list_set_element_at_offset
  - write on set value ? what about create ?
  - add calculate_cache_entry_index support
  - implement libfdata_list_read_buffer and libfdata_list_seek_offset ?
  - add a function to look for data range offset instead of relative list offset
    libfdata_list_get_element_value_at_offset ?
  - rename element_offset and equiv to element_data_offset
* range list
  - work in progress
* stream
  - add mapped offset support ?
  - add mapped size write support ?
* tree
  - refactor
  - libfdata_tree_node_set_node_value add file_io_handle argument? like other equiv functions
  - add mapped offset support ?
  - unload parts of the tree if it becomes too large
* tree node
  - refactor
  - add mapped offset support ?
  - allow to invalidate sub nodes data range?
* vector
  - add mapped offset support ?
  - refactor
  - write on set value ? what about create ?
  - rename element_offset and equiv to element_data_offset
  - change behavior of libfdata_vector_get_element_value_by_index to return 0 if offset is out of bounds like libfdata_list_set_element_value_at_offset?
  - change behavior of libfdata_vector_get_element_value_at_offset to return 0 if offset is out of bounds like libfdata_list_set_element_value_at_offset?

Optimizations:
* mapped ranges