@@ -660,17 +660,21 @@ int libfdata_list_get_element_at_offset(
      libfdata_error_t **error );
 
 /* Caches the element value
+ *
+ * This function is deprecated instead use libfdata_list_set_element_value
+ *
  * Returns 1 if successful or -1 on error
  */
+LIBFDATA_DEPRECATED \
 LIBFDATA_EXTERN \
 int libfdata_list_cache_element_value(
      libfdata_list_t *list,
      libfdata_cache_t *cache,
      int element_index,
      int element_file_index,
-     off64_t element_offset,
-     size64_t element_size,
-     uint32_t element_flags,
+     off64_t element_data_offset,
+     size64_t element_data_size,
+     uint32_t element_data_flags,
      int64_t element_timestamp,
      intptr_t *element_value,
      int (*free_element_value)(
